# phantom

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  deny.toml  plan.md  worktree-prompts.md
crates/phantom-cli/: Cargo.toml
crates/phantom-cli/examples/: seed_dependency_ripple.rs  seed_three_submits.rs
crates/phantom-cli/src/: cli.rs  cli_adapter.rs  context.rs  main.rs  pid_guard.rs
crates/phantom-cli/src/commands/: agent_color.rs  agent_monitor.rs  background.rs  changes.rs  conflicts.rs  destroy.rs  dispatch.rs  down.rs  exec.rs  fuse_mount.rs  init.rs  interactive.rs  log.rs  materialize.rs  mod.rs  notify_hook.rs  plan.rs  plan_tests.rs  recover.rs  remove.rs  resolve.rs  resume.rs  rollback.rs  status.rs  submit.rs  task.rs  tasks.rs  textbox.rs  textbox_tests.rs  ui.rs  up.rs  verify.rs
crates/phantom-cli/src/fs/: fuse.rs  mod.rs
crates/phantom-cli/src/services/: event_queries.rs  mod.rs  validate.rs
crates/phantom-cli/src/ui/: mod.rs  style.rs  text.rs  time.rs
crates/phantom-cli/tests/: cli_conflict_resolve_test.rs  cli_tests.rs
crates/phantom-core/: Cargo.toml
crates/phantom-core/src/: changeset.rs  changeset_tests.rs  conflict.rs  conflict_tests.rs  error.rs  event.rs  event_tests.rs  id.rs  id_tests.rs  lib.rs  notification.rs  plan.rs  plan_tests.rs  reserved.rs  symbol.rs  symbol_tests.rs  task_category.rs  traits.rs  traits_tests.rs  util.rs
crates/phantom-events/: Cargo.toml
crates/phantom-events/src/: error.rs  kind_pattern.rs  lib.rs  projection.rs  query.rs  replay.rs  replay_tests.rs  schema.rs  schema_tests.rs  snapshot.rs  store.rs
crates/phantom-events/src/projection/: apply.rs  mod.rs
crates/phantom-events/src/schema/: ddl.rs  migrations.rs  mod.rs
crates/phantom-events/src/snapshot/: mod.rs  policy.rs  repository.rs
crates/phantom-events/src/store/: config.rs  connection.rs  mod.rs  queries.rs  query_builder.rs  row.rs
crates/phantom-events/tests/: projection_tests.rs  store_integration.rs
crates/phantom-git/: Cargo.toml
crates/phantom-git/src/: error.rs  fs_walk.rs  helpers.rs  lib.rs  merge.rs  oid.rs  ops.rs  test_support.rs  tree.rs
crates/phantom-git/src/ops/: diff.rs  history.rs  merge.rs  mod.rs  read.rs  test_helpers.rs
crates/phantom-git/src/tree/: blobs.rs  build.rs  mod.rs
crates/phantom-orchestrator/: Cargo.toml
crates/phantom-orchestrator/src/: error.rs  git.rs  impact.rs  lib.rs  live_rebase.rs  live_rebase_tests.rs  materialization_service.rs  materializer.rs  materializer_tests.rs  ops.rs  pending_notifications.rs  recovery.rs  ripple.rs  ripple_tests.rs  scheduler.rs  scheduler_tests.rs  submit_service.rs  test_support.rs  trunk_update.rs  trunk_update_tests.rs
crates/phantom-orchestrator/src/git/: helpers.rs  merge.rs  mod.rs  mod_tests.rs  ops.rs  ops_tests.rs  tree.rs  tree_tests.rs
crates/phantom-orchestrator/src/materialization_service/: agent_ripple.rs  mod.rs  notifications.rs
crates/phantom-orchestrator/src/materializer/: commit.rs  direct_apply.rs  events.rs  lock.rs  merge_apply.rs  merge_file.rs  mod.rs  path_validation.rs
crates/phantom-orchestrator/src/submit_service/: changeset_builder.rs  discovery.rs  events.rs  mod.rs  operations.rs  overlay_scan.rs  pipeline.rs  pre_submit_warnings.rs  scope_audit.rs
crates/phantom-overlay/: Cargo.toml
crates/phantom-overlay/src/: error.rs  exclusion.rs  fuse_fs.rs  inode_table.rs  layer.rs  layer_tests.rs  lib.rs  manager.rs  manager_tests.rs  trunk_view.rs  types.rs  whiteout.rs
crates/phantom-overlay/src/fuse_fs/: attr.rs  config.rs  filesystem.rs  handles.rs  mod.rs
crates/phantom-overlay/src/layer/: classify.rs  io_util.rs  maintenance.rs  mod.rs  read.rs  rename.rs  write.rs
crates/phantom-overlay/tests/: layer_concurrent.rs  layer_delete.rs  layer_exclusion.rs  layer_read_write.rs  layer_rename.rs  layer_reserved_paths.rs  layer_symlink.rs  manager_destroy_trunk_safety.rs
crates/phantom-overlay/tests/common/: mod.rs
crates/phantom-semantic/: Cargo.toml
crates/phantom-semantic/src/: diff.rs  diff_tests.rs  error.rs  graph.rs  index.rs  index_tests.rs  lib.rs  merge.rs  parser.rs  parser_tests.rs
crates/phantom-semantic/src/config_merge/: json.rs  mod.rs  toml.rs  yaml.rs
crates/phantom-semantic/src/languages/: bash.rs  bash_tests.rs  css.rs  css_tests.rs  dockerfile.rs  dockerfile_tests.rs  go.rs  go_tests.rs  hcl.rs  hcl_tests.rs  json.rs  json_tests.rs  makefile.rs  makefile_tests.rs  mod.rs  python.rs  python_tests.rs  rust.rs  rust_tests.rs  toml.rs  toml_tests.rs  typescript.rs  typescript_tests.rs  yaml.rs  yaml_tests.rs
crates/phantom-semantic/src/merge/: conflict.rs  mod.rs  mod_tests.rs  reconstruct.rs  tests.rs  text.rs  text_tests.rs
crates/phantom-session/: Cargo.toml
crates/phantom-session/src/: adapter.rs  adapter_tests.rs  context_file.rs  hook_config.rs  lib.rs  post_session.rs  pty.rs  signatures.rs  signatures_tests.rs
crates/phantom-session/src/adapter/: claude.rs  gemini.rs  generic.rs  mod.rs  opencode.rs  session.rs  tests.rs
crates/phantom-session/src/context_file/: category_rules.rs  mod.rs  mod_tests.rs  plan.rs  resolve.rs  resolve_tests.rs  task.rs  task_tests.rs
crates/phantom-session/src/post_session/: display.rs  mod.rs  submit.rs
crates/phantom-testkit/: Cargo.toml
crates/phantom-testkit/src/: builders.rs  lib.rs  mocks.rs  repo.rs
crates/phantom-toolchain/: Cargo.toml
crates/phantom-toolchain/src/: detect.rs  lib.rs  toolchain.rs
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs
tests/integration/tests/: active_notification.rs  concurrent_submit_overlay_write.rs  corrupted_event_store.rs  dependency_graph_multi_language.rs  dependency_graph_pre_submit_warning.rs  dependency_graph_ripple.rs  dependency_graph_unresolved_refs.rs  empty_submit_is_noop.rs  event_log_query.rs  fence_emitted_in_order.rs  fence_survives_materialized_fault.rs  materialize_and_ripple.rs  materialize_append_crash.rs  rollback_replay.rs  semantic_merge_fallback.rs  two_agents_disjoint.rs  two_agents_same_file.rs  two_agents_same_symbol.rs  unborn_head_rejected.rs
(+70 files in other folders)
