[workspace]
resolver = "3"
members = [
    "crates/phantom-core",
    "crates/phantom-events",
    "crates/phantom-overlay",
    "crates/phantom-semantic",
    "crates/phantom-orchestrator",
    "crates/phantom-session",
    "crates/phantom-cli",
    "crates/phantom-testkit",
    "tests/integration",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT"

[workspace.dependencies]
phantom-core = { path = "crates/phantom-core" }
phantom-events = { path = "crates/phantom-events" }
phantom-overlay = { path = "crates/phantom-overlay" }
phantom-semantic = { path = "crates/phantom-semantic" }
phantom-orchestrator = { path = "crates/phantom-orchestrator" }
phantom-session = { path = "crates/phantom-session" }
phantom-testkit = { path = "crates/phantom-testkit" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
blake3 = "1"
thiserror = "2"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
tempfile = "3"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
async-trait = "0.1"
fuser = "0.17"
libc = "0.2"
git2 = "0.20"
clap = { version = "4", features = ["derive"] }
tracing-subscriber = "0.3"
anyhow = "1"
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-go = "0.25"
tree-sitter-yaml = "0.7"
tree-sitter-toml-ng = "0.7"
tree-sitter-json = "0.24"
tree-sitter-bash = "0.25"
tree-sitter-hcl = "1.1"
tree-sitter-css = "0.25"
tree-sitter-make = "1.1"
diffy = "0.4"
nix = { version = "0.30", features = ["term", "signal"] }
regex = "1"
dialoguer = "0.11"
console = "0.15"
uuid = { version = "1", features = ["v7"] }
