[workspace]
resolver = "3"
members = [
    "crates/phantom-core",
    "crates/phantom-git",
    "crates/phantom-events",
    "crates/phantom-overlay",
    "crates/phantom-semantic",
    "crates/phantom-toolchain",
    "crates/phantom-orchestrator",
    "crates/phantom-session",
    "crates/phantom-cli",
    "crates/phantom-testkit",
    "tests/integration",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT"

[workspace.dependencies]
phantom-core = { path = "crates/phantom-core" }
phantom-git = { path = "crates/phantom-git" }
phantom-events = { path = "crates/phantom-events" }
phantom-overlay = { path = "crates/phantom-overlay" }
phantom-semantic = { path = "crates/phantom-semantic" }
phantom-toolchain = { path = "crates/phantom-toolchain" }
phantom-orchestrator = { path = "crates/phantom-orchestrator" }
phantom-session = { path = "crates/phantom-session" }
phantom-testkit = { path = "crates/phantom-testkit" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
blake3 = "1"
thiserror = "2"
tracing = "0.1"
tokio = { version = "1", features = ["rt", "macros", "time", "sync", "signal"] }
tempfile = "3"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
async-trait = "0.1"
fuser = "0.17"
libc = "0.2"
git2 = "0.20"
clap = { version = "4", features = ["derive"] }
tracing-subscriber = "0.3"
anyhow = "1"
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-go = "0.25"
tree-sitter-yaml = "0.7"
tree-sitter-toml-ng = "0.7"
tree-sitter-json = "0.24"
tree-sitter-bash = "0.25"
tree-sitter-hcl = "1.1"
tree-sitter-css = "0.25"
tree-sitter-make = "1.1"
diffy = "0.4"
nix = { version = "0.30", features = ["term", "signal"] }
regex = "1"
dialoguer = "0.11"
console = "0.15"
uuid = { version = "1", features = ["v7"] }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
# Documentation lints — not safety/correctness issues
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
# Style preferences — allow project-wide
items_after_statements = "allow"
needless_raw_string_hashes = "allow"
similar_names = "allow"
too_many_lines = "allow"
# Cast lints — intentional for SQLite i64/u64 and FUSE u32/i32 conversions
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_possible_truncation = "allow"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
