[package]
name = "phantom-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "The `phantom` command-line interface"

[[bin]]
name = "phantom"
path = "src/main.rs"

[dependencies]
phantom-core = { workspace = true }
phantom-events = { workspace = true }
phantom-overlay = { workspace = true, features = ["fuse"] }
phantom-semantic = { workspace = true }
phantom-orchestrator = { workspace = true }
phantom-session = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
git2 = { workspace = true }
libc = { workspace = true }
fuser = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dialoguer = { workspace = true }
console = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
tempfile = { workspace = true }
predicates = "3"
