[package]
name = "phantom-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types, traits, and error handling for Phantom"
publish = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
