[package]
name = "phantom-events"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "SQLite-backed append-only event store for Phantom"

[dependencies]
phantom-core = { workspace = true }
rusqlite = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
