[package]
name = "phantom-git"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Git operations for Phantom, built on git2"

[dependencies]
phantom-core = { workspace = true }
git2 = { workspace = true }
diffy = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dependencies.tempfile]
workspace = true

[dev-dependencies]

[lints]
workspace = true
