[package]
name = "phantom-git"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Git operations for Phantom, built on git2"
publish = false

[dependencies]
phantom-core = { workspace = true }
git2 = { workspace = true }
diffy = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dependencies.tempfile]
workspace = true

[dev-dependencies]

[lints]
workspace = true
