[package]
name = "phantom-orchestrator"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Coordination layer: scheduling, materialization, and ripple notifications"

[dependencies]
phantom-core = { workspace = true }
phantom-events = { workspace = true }
phantom-overlay = { workspace = true }
phantom-semantic = { workspace = true }
git2 = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
diffy = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
