[package]
name = "phantom-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Coordination layer: scheduling, materialization, and ripple notifications"
publish = false

[dependencies]
phantom-core = { workspace = true }
phantom-git = { workspace = true }
phantom-events = { workspace = true }
phantom-overlay = { workspace = true }
phantom-semantic = { workspace = true }
git2 = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
diffy = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
nix = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
