[package]
name = "phantom-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Coordination layer: scheduling, materialization, and ripple notifications"
publish = false

[dependencies]
phantom-core = { workspace = true }
phantom-git = { workspace = true }
phantom-events = { workspace = true }
phantom-overlay = { workspace = true }
phantom-semantic = { workspace = true }
git2 = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
diffy = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
nix = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
# Pull in phantom-git's test helpers only for the orchestrator's own tests.
# This keeps the panic-on-error helpers out of the release binary.
phantom-git = { workspace = true, features = ["test-helpers"] }

[lints]
workspace = true
