[package]
name = "phantom-overlay"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "FUSE overlay filesystem for per-agent isolation"

[features]
fuse-tests = []

[dependencies]
phantom-core = { workspace = true }
fuser = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
libc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
