[package]
name = "phantom-overlay"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "FUSE overlay filesystem for per-agent isolation"
publish = false

[features]
default = ["fuse"]
fuse = ["dep:fuser", "dep:libc"]
fuse-tests = []

[dependencies]
phantom-core = { workspace = true }
fuser = { workspace = true, optional = true }
tracing = { workspace = true }
thiserror = { workspace = true }
libc = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true

