[package]
name = "phantom-semantic"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Semantic index, AST parsing, and three-way merge engine"

[dependencies]
phantom-core = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-go = { workspace = true }
blake3 = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
diffy = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
