[package]
name = "phantom-semantic"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Semantic index, AST parsing, and three-way merge engine"
publish = false

[dependencies]
phantom-core = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-yaml = { workspace = true }
tree-sitter-toml-ng = { workspace = true }
tree-sitter-json = { workspace = true }
tree-sitter-bash = { workspace = true }
tree-sitter-hcl = { workspace = true }
tree-sitter-css = { workspace = true }
tree-sitter-make = { workspace = true }
blake3 = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
diffy = { workspace = true }
toml_edit = { workspace = true }
serde_yaml_ng = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
