[package]
name = "phantom-testkit"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Shared test utilities for the Phantom workspace"
publish = false

[dependencies]
phantom-core = { workspace = true }
phantom-events = { workspace = true }
phantom-semantic = { workspace = true }
phantom-orchestrator = { workspace = true }
chrono = { workspace = true }
tempfile = { workspace = true }
git2 = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
