[package]
name = "phantom-toolchain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Toolchain detection and language-specific helpers for Phantom"
publish = false

[dependencies]
phantom-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
