[package]
name = "phantom-integration-tests"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
phantom-testkit = { workspace = true }
phantom-core = { workspace = true }
phantom-events = { workspace = true }
phantom-overlay = { workspace = true }
phantom-semantic = { workspace = true }
phantom-orchestrator = { workspace = true }
chrono = { workspace = true }
tempfile = { workspace = true }
git2 = { workspace = true }
tokio = { workspace = true }
